# rocket-twin

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  Aerodynamics.py  Alpha.py  Atmosphere.py  Coefficients.py  Density.py  Dynamics.py  DynamicsPar.py  Earth.py  Fusee3Dv3.ipynb  Fusee3Dv4.ipynb  Fusee3Dv8.ipynb  Geometry.py  Gravity.py  Kinematics.py  LICENSE  MANIFEST.in  Mass.py  Parachute.py  Ports.py  README.md  ReferentialPort.py  Rocket.py  Thrust.py  Trajectory.py  Utility.py  Wind.py  aero.txt  controller.fmu  earth.html  environment-dev.yml  exec.ipynb  fusee.py  fusee3DJ.ipynb  fusee3DJ.py  main.py  montecarlo.ipynb  new_rocket_draft.ipynb  (+12 more)
Aero/: AeroForces.py  (+4 more)
rocket_with_reservatory/: .gitignore  README.md  environment-dev.yml  setup.cfg
rocket_with_reservatory/rocket_with_reservatory/: test.py
rocket_with_reservatory/rocket_with_reservatory/drivers/: __init__.py  mission.py
rocket_with_reservatory/rocket_with_reservatory/notebooks/: Visualisation.ipynb
rocket_with_reservatory/rocket_with_reservatory/systems/: __init__.py  ground.py
rocket_with_reservatory/rocket_with_reservatory/systems/engine/: __init__.py
rocket_with_reservatory/rocket_with_reservatory/systems/ground_res/: __init__.py  ground_reservatory.py
rocket_with_reservatory/rocket_with_reservatory/systems/physics/: __init__.py
rocket_with_reservatory/rocket_with_reservatory/tests/: test_dynamics.py  test_flying_rocket.py  test_ground_reservatory.py  test_mission.py  test_refuel_rocket.py  test_reservatory.py  test_rocket_geom.py
rocket_with_reservatory/tests/: default_test.py
(+277 files in other folders)
