[metadata]
name =rocket_with_reservatory
version = attr: rocket_with_reservatory._version.__version__
author =Luca Rodrigues Miguel
description =A rocket with a ground reservatory for fuel
long_description = file: README.md, CHANGELOG.md
home-page =
license = Proprietary License
license-file = LICENSE
keywords =
classifiers =
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: Other/Proprietary License
	Natural Language :: English
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.6